# telegram-diary

./: .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  main.py  plan.txt  pyproject.toml  requirements.txt  work_flow.draw  work_flow.txt
alembic/: env.py
alembic/versions/: 20260214_0001_create_diary_entries.py  20260214_0002_create_events.py  20260214_0003_create_user_settings.py  20260214_0004_event_participants_text_labels.py  20260214_0005_create_users_and_participants_by_tg_id.py  20260217_0006_create_budget_and_expenses.py  20260217_0007_create_budget_settings.py
src/: handler.py
src/bot/: client.py  config.py  main.py  schemas.py
src/service/: config.py  main.py
src/service/api/: handlers.py  repository.py  schemas.py
src/service/db/: __init__.py  lifecycle.py  models.py  session.py
